third_party/move/move-compiler-v2/tests/checking/typing/vector_with_non_base_type_inferred.exp

Diagnostics:
error: reference type `&integer` is not allowed as a type argument (type was inferred)
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:4:9
  │
4 │         vector[&0];
  │         ^^^^^^
  │
  = required by instantiating vector type parameter

error: reference type `&mut integer` is not allowed as a type argument (type was inferred)
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:5:9
  │
5 │         vector[&mut 0];
  │         ^^^^^^
  │
  = required by instantiating vector type parameter

error: tuple type `()` is not allowed as a type argument (type was inferred)
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:6:9
  │
6 │         vector[()];
  │         ^^^^^^
  │
  = required by instantiating vector type parameter

error: tuple type `(integer, bool)` is not allowed as a type argument (type was inferred)
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:7:9
  │
7 │         vector[(0, false)];
  │         ^^^^^^
  │
  = required by instantiating vector type parameter

error: reference type `&integer` is not allowed as a type argument (type was inferred)
  ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:9:9
  │
9 │         vector[&0, &mut 0];
  │         ^^^^^^
  │
  = required by instantiating vector type parameter

error: reference type `&integer` is not allowed as a type argument (type was inferred)
   ┌─ tests/checking/typing/vector_with_non_base_type_inferred.move:10:9
   │
10 │         vector[&mut 0, &0];
   │         ^^^^^^
   │
   = required by instantiating vector type parameter
